Rewrite fateserver with Node.js
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/public/stylesheets/fate.css
+++ b/public/stylesheets/fate.css
@@ -18,6 +18,10 @@
 .recent  { font-weight: bold; }
 .ancient { color: #888; }
 
+.table-responsive {
+    border: none;
+}
+
 .fail {
     background: #d9534f !important;
     color: white;
