Better error management, fancier history page
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -22,4 +22,10 @@
  * THE SOFTWARE.
  */%>
 
-<%= message %>
+Error <%= error.status %>:
+
+<% if (error) { %>
+  <%= error.stack %>
+<% } else { %>
+  <%= message %>
+<% } %>
