--- a/style.less
+++ b/style.less
@@ -244,6 +244,8 @@ code {
 .table {
     margin: 20px 0;
     border-radius: 4px;
+    // Border around the entire table
+    //border: 1px solid @Cmaindarkdark;
     // Stripes
     > tbody > tr:nth-child(odd) {
         > td {
@@ -261,7 +263,6 @@ code {
             > th,
             > td {
                 border-top: 1px solid @Cmaindarkdark;
-                border-bottom: 1px solid @Cmaindarkdark;
             }
             > th {
                 background-color: @Cmainlight;
@@ -270,7 +271,7 @@ code {
     }
     // Bottom align for column headings
     > thead > tr > th {
-        border-bottom: 2px solid @Cmaindarkdark;
+        border-bottom: 2px solid @Cmainlightlight;
     }
     // Account for multiple tbody instances
     > tbody + tbody {
@@ -291,6 +292,9 @@ code {
             > th,
             > td {
                 border: 1px solid @Cmaindarkdark;
+            }
+            > th {
+                border-bottom: 2px solid @Cmainlightlight;
             }
         }
     }
