--- a/views/header2.ejs
+++ b/views/header2.ejs
@@ -1,7 +1,10 @@
     <link rel="stylesheet" href="https://ffmpeg.org/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://ffmpeg.org/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://ffmpeg.org/css/simple-sidebar.css" />
+    <!--
     <link rel="stylesheet" href="https://ffmpeg.org/css/style.min.css" />
+    -->
+    <link rel="stylesheet" href="/stylesheets/style.min.css" />
     <link rel="stylesheet" href="/stylesheets/fate.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--[if lt IE 9]>
