Better history and report page (now with test reports)
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/style.less
+++ b/style.less
@@ -69,6 +69,13 @@ a {
     }
 }
 
+.nav-tabs>li>a {
+    color: @Cinvert;
+    &:hover {
+        color: @Cseconddark;
+    }
+}
+
  
 main {
     width: @Smain !important;
