--- a/views/replist.ejs
+++ b/views/replist.ejs
@@ -25,19 +25,19 @@
 <%/*
  * To use this, do something like this:
  *
- *     var repsSorted = [ parse.loadSummary('c', 20140101000000),
- *                        parse.loadSummary('d', 20140102000000) ]
+ *     var reps = [ parse.loadSummary('c', 20140101000000),
+ *                  parse.loadSummary('d', 20140102000000) ]
  *
  * Then include this file. The input array of summaries must be in
- * `repsSorted`.
+ * `reps`.
  */%>
 
 <% var now = moment.utc() %>
 <% propsToDisplay = propsToDisplay || ['date', 'rev', 'subarch', 'os',
                                        'cc', 'nwarn', 'results'] %>
 
-<% for (var i = 0; i < repsSorted.length; i++) { %>
-  <% var rep = repsSorted[i] %>
+<% for (var i = 0; i < reps.length; i++) { %>
+  <% var rep = reps[i] %>
   <% var repClass = '' %>
   <% var repMoment = ts.getMoment(rep.date) %>
   <% if (now.unix() < repMoment.unix() + ts.recentAge) {
