report: Remove total number of tests from the failed tests badge
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -80,7 +80,7 @@ Report of <%= slot %> <%= summary.rev %>
   <li role="presentation">
     <a href="#failed_tests" role="tab" data-toggle="tab">
       Failed Tests
-      <span class="badge <%= summary.rclass %>"><%= summary.nfail %>/<%= summary.ntests %></span>
+      <span class="badge <%= summary.rclass %>"><%= summary.nfail %></span>
     </a>
   </li>
   <% } %>
