error: Don't use with(){}
ab -n1000 -c25 `a report 404 page`
1.439s -> 1.184s (18% decrease)

Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -22,10 +22,10 @@
  * THE SOFTWARE.
  */%>
 
-Error <%= status %>:
+Error <%= locals.status %>:
 
-<% if (error) { %>
-  <%= error.stack %>
+<% if (locals.error) { %>
+  <%= locals.error.stack %>
 <% } else { %>
-  <%= message %>
+  <%= locals.message %>
 <% } %>
