Use strict mode and fix ejs locals bug
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -82,7 +82,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
   <li role="presentation">
     <a href="#failed_tests" role="tab" data-toggle="tab">
       Failed Tests
-      <span class="badge <%= summary.rclass %>"><%= summary.nfail %></span>
+      <span class="badge <%= l.summary.rclass %>"><%= l.summary.nfail %></span>
     </a>
   </li>
   <% } %>
