Move stylesheets/ to css/
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/header2.ejs
+++ b/views/header2.ejs
@@ -4,8 +4,8 @@
     <!--
     <link rel="stylesheet" href="https://ffmpeg.org/css/style.min.css" />
     -->
-    <link rel="stylesheet" href="/stylesheets/style.min.css" />
-    <link rel="stylesheet" href="/stylesheets/fate.css" />
+    <link rel="stylesheet" href="/css/style.min.css" />
+    <link rel="stylesheet" href="/css/fate.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--[if lt IE 9]>
       <script src="//ffmpeg.org/js/html5shiv.min.js"></script>
